--- a/dividesmart/main/static/css/index.css
+++ b/dividesmart/main/static/css/index.css
@@ -13,3 +13,18 @@ body {
   padding: 30px 0 18px 0;
   margin-left: 15px;
 }
+
+/* for CSSTransition */
+.fade-enter {
+  opacity: 0.08;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 380ms ease-in;
+}
+
+.fade-exit {
+  display: none;
+}
