--- a/dividesmart/main/static/style/index.less
+++ b/dividesmart/main/static/style/index.less
@@ -5,7 +5,7 @@
     color: @brand-primary
 }
 
-.create-debt-btn {
+.create-debt-btn, .scan-receipt-btn {
     background-color: @brand-primary !important
 }
 
