--- a/dividesmart/main/static/style/index.less
+++ b/dividesmart/main/static/style/index.less
@@ -16,3 +16,49 @@
 .other-owe-amount {
     color: @other-owe-color
 }
+
+.divide-list .am-input-item{
+    height: auto;
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+.divide-list .am-list-item img {
+    height: 100%;
+    width: 100%;
+}
+
+.divide-list .am-list-line:after {
+    content: none
+}
+
+
+body {
+  font-family: Roboto
+}
+
+.result-example .spe {
+  width: 60px;
+  height: 60px;
+}
+.sub-title {
+  color: #888;
+  font-size: 14px;
+  padding: 30px 0 18px 0;
+  margin-left: 15px;
+}
+
+/* for CSSTransition */
+.fade-enter {
+  opacity: 0.08;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 380ms ease-in;
+}
+
+.fade-exit {
+  display: none;
+}
