--- a/dividesmart/main/templates/main/login.html
+++ b/dividesmart/main/templates/main/login.html
@@ -5,7 +5,7 @@
     <title>Sign In</title>
 
 </head>
-<body style="background-image: linear-gradient(to bottom right, white, #87cefa); background-repeat: no-repeat;  background-attachment: fixed;">
+<body>
     <div id="main"></div>
 </body>
 
