--- a/dividesmart/main/templates/main/qr_code.html
+++ b/dividesmart/main/templates/main/qr_code.html
@@ -9,12 +9,8 @@
   <title>Index</title>
 </head>
 <body>
-	<div id="topbar" style="width:100%; height:10%"></div>
-    <div id="qr-scanner" style="width:80%; height:80%; padding-left:10%; padding-top:5%;"></div>
-    <h1 style="height:10%; text-align:center;">
-    	Scan your friend's QR Code to add them!
-    </h1>
+	<div id="main"></div>
 </body>
-<script src="/static/bundle/main/qr_scanner.js"></script>
+<script src="/static/bundle/main/qr_code.js"></script>
 
 </html>
