--- a/dividesmart/main/static/style/index.less
+++ b/dividesmart/main/static/style/index.less
@@ -1,5 +1,6 @@
 @owe-other-color: #d35400;
 @other-owe-color: #1ba39c;
+@payment-color: #0984e3;
 
 .topbar-btn {
     color: @brand-primary
@@ -15,6 +16,10 @@
 
 .other-owe-amount {
     color: @other-owe-color
+}
+
+.payment-amount {
+    color: @payment-color
 }
 
 .divide-list .am-input-item{
