--- a/dividesmart/main/static/style/index.less
+++ b/dividesmart/main/static/style/index.less
@@ -3,38 +3,38 @@
 @payment-color: #0984e3;
 
 .topbar-btn {
-    color: @brand-primary
+  color: @brand-primary
 }
 
 .create-debt-btn, .scan-receipt-btn {
-    background-color: @brand-primary !important
+  background-color: @brand-primary !important
 }
 
 .owe-other-amount {
-    color: @owe-other-color
+  color: @owe-other-color
 }
 
 .other-owe-amount {
-    color: @other-owe-color
+  color: @other-owe-color
 }
 
 .payment-amount {
-    color: @payment-color
+  color: @payment-color
 }
 
 .divide-list .am-input-item{
-    height: auto;
-    padding-top: 6px;
-    padding-bottom: 6px;
+  height: auto;
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
 
 .divide-list .am-list-item img {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 .divide-list .am-list-line:after {
-    content: none
+  content: none
 }
 
 
@@ -68,4 +68,7 @@ body {
   display: none;
 }
 
+.user-email .am-list-extra {
+  min-width: 60%;
+}
 
