--- a/dividesmart/main/templates/main/login.html
+++ b/dividesmart/main/templates/main/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://apis.google.com/js/api:client.js"></script>
+    {% include "home/tools_import_subpage.html" %}
     <title>Sign In</title>
 </head>
 <body>
