working service worker

--- a/dividesmart/main/templates/main/index.html
+++ b/dividesmart/main/templates/main/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="An awesome bill splitting Webapp"/>
+  <link rel="manifest" href="/static/manifest.json">
+  <meta name="theme-color" content="#0060c0">
+
   {% include "main/tools_import_subpage.html" %}
   <title>Index</title>
 </head>
@@ -12,4 +16,15 @@
 </body>
 <script src="/static/bundle/main/index.js"></script>
 
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/sw', { scope: '/api' })
+      .then(function(registration) {
+            console.log('Service Worker Registered');
+      });
+    navigator.serviceWorker.ready.then(function(registration) {
+        console.log('Service Worker Ready');
+    });
+  }
+</script>
 </html>
