--- a/dividesmart/main/templates/main/login.html
+++ b/dividesmart/main/templates/main/login.html
@@ -17,7 +17,7 @@
 <script src="/static/bundle/main/login.js"></script>
 <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/sw', { scope: '/api' })
+    navigator.serviceWorker.register('/sw', { scope: '/' })
       .then(function(registration) {
             console.log('Service Worker Registered');
       });
