--- a/dividesmart/main/templates/main/index.html
+++ b/dividesmart/main/templates/main/index.html
@@ -16,7 +16,7 @@
 </body>
 <script src="/static/bundle/main/index.js"></script>
 
-<script>
+<!-- <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('/sw', { scope: '/' })
       .then(function(registration) {
@@ -26,5 +26,5 @@
         console.log('Service Worker Ready');
     });
   }
-</script>
+</script> -->
 </html>
