--- a/dividesmart/main/templates/main/login.html
+++ b/dividesmart/main/templates/main/login.html
@@ -8,23 +8,22 @@
     <meta name="theme-color" content="#0060c0">
     <!-- <script src="https://apis.google.com/js/api:client.js"></script> -->
     {% include "main/tools_import_subpage.html" %}
-    <title>Sign In</title>
+    <title>Log In</title>
 </head>
 <body>
     <div id="main"></div>
 </body>
 
 <script src="/static/bundle/main/login.js"></script>
-<script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/sw', { scope: '/' })
-      .then(function(registration) {
-            console.log('Service Worker Registered');
-      });
-    navigator.serviceWorker.ready.then(function(registration) {
-        console.log('Service Worker Ready');
-    });
-  }
-</script>
+<!-- <script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/sw', { scope: '/login' }).then(function(registration) {
+    console.log('Service Worker Registered');
+  });
+  navigator.serviceWorker.ready.then(function(registration) {
+    console.log('Service Worker Ready');
+  });
+}
+</script> -->
 </html>
 
