--- a/dividesmart/main/static/style/login.less
+++ b/dividesmart/main/static/style/login.less
@@ -1,4 +1,4 @@
-#loginCard {
+#login-card {
 	margin-left: 8vw;
 	margin-right: 8vw;
 	padding-bottom: 8vh;
@@ -9,29 +9,29 @@
     justify-content: center
 }
 
-.socialButton {
+.social-button {
 	width: 66%;
 	height: 48px;
 }
 
-#googleButton {
+#google-button {
 	background-color:#DD4B39;
 	border-color:#DD4B39
 }
 
-#facebookButton {
+#facebook-button {
 	background-color: #3b5998;
 	border-color: #3b5998
 }
 
-.socialIcon {
+.social-icon {
 	color: white;
 	height: 28;
 	width: 28;
 	margin-right: 28
 }
 
-.socialText {
+.social-text {
 	color: white;
 	font-size: 13;
 	font-weight: 400;
@@ -39,6 +39,6 @@
 	text-transform: none
 }
 
-.inputWidth {
+.input-width {
 	width: 69%
 }
