--- a/dividesmart/main/templates/main/login.html
+++ b/dividesmart/main/templates/main/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="An awesome bill splitting Webapp"/>
     <meta name="theme-color" content="#0060c0">
-    <!-- <script src="https://apis.google.com/js/api:client.js"></script> -->
+    <script src="https://apis.google.com/js/api:client.js"></script>
     {% include "main/tools_import_subpage.html" %}
     <title>Log In</title>
 </head>
