--- a/dividesmart/main/static/style/login.less
+++ b/dividesmart/main/static/style/login.less
@@ -26,9 +26,9 @@
 
 .social-icon {
 	color: white;
-	height: 28;
-	width: 28;
-	margin-right: 28
+	height: 28px;
+	width: 28px !important;
+	margin-right: 28px;
 }
 
 .social-text {
