--- a/dividesmart/main/static/style/login.less
+++ b/dividesmart/main/static/style/login.less
@@ -1,7 +1,8 @@
 #login-card {
 	margin-left: 8vw;
 	margin-right: 8vw;
-	padding-bottom: 8vh;
+	padding-top: 4vh;
+	padding-bottom: 4vh;
 }
 
 .social {
@@ -15,8 +16,8 @@
 }
 
 #google-button {
-	background-color:#DD4B39;
-	border-color:#DD4B39
+	background-color: #DD4B39;
+	border-color: #DD4B39
 }
 
 #facebook-button {
@@ -26,16 +27,15 @@
 
 .social-icon {
 	color: white;
-	height: 28;
-	width: 28;
-	margin-right: 28
+	height: 28px;
+	width: 28px !important;
+	margin-right: 28px
 }
 
 .social-text {
 	color: white;
-	font-size: 13;
+	font-size: 13px;
 	font-weight: 400;
-	padding-top: 2;
 	text-transform: none
 }
 
