Fixed login styling

--- a/dividesmart/main/static/style/login.less
+++ b/dividesmart/main/static/style/login.less
@@ -1,8 +1,11 @@
+#logo {
+	height: 12vh;
+}
+
 #login-card {
 	margin-left: 8vw;
 	margin-right: 8vw;
-	padding-top: 4vh;
-	padding-bottom: 4vh;
+	padding-bottom: 8vh;
 }
 
 .social {
@@ -29,6 +32,13 @@
 	color: white;
 	height: 28px;
 	width: 28px !important;
+	margin-right: 28px;
+}
+
+#submit-icon {
+	color: white;
+	height: 28px;
+	width: 28 !important;
 	margin-right: 28px;
 }
 
