--- a/dividesmart/main/static/style/topbar.less
+++ b/dividesmart/main/static/style/topbar.less
@@ -4,26 +4,26 @@
 }
 
 #link-style {
-	marginRight: 5; 
+	margin-right: 5; 
 	color: black
 }
 
 #ellipsis-icon {
-	height: '100%';
-    padding: '0 15px';
-    marginRight: '-15px';
-    display: 'flex';
-    alignItems: 'center'
+	height: 100%;
+    padding: 0 15px;
+    margin-right: -15px;
+    display: flex;
+    align-items: center
 }
 
 #navbar-style {
-	height: '6vh'; 
-	position: 'fixed';
-	width: '100%';
+	height: 6vh; 
+	position: fixed;
+	width: 100%;
 	zIndex: 1000
 }
 
 #home-icon {
-	width: '28px'; 
-	height: '28px'
+	width: 28px; 
+	height: 28px
 }
