put int dummy logo

--- a/dividesmart/main/static/style/login.less
+++ b/dividesmart/main/static/style/login.less
@@ -1,5 +1,11 @@
+#logo-div {
+  height: 138px;
+  text-align: center;
+}
+
 #logo {
-	height: 12vh;
+  margin-top: 28px;
+  height: 80px;
 }
 
 #login-card {
