--- a/dividesmart/main/static/style/topbar.less
+++ b/dividesmart/main/static/style/topbar.less
@@ -10,17 +10,17 @@
 
 #ellipsis-icon {
 	height: 100%;
-    padding: 0 15px;
-    margin-right: -15px;
-    display: flex;
-    align-items: center
+  padding: 0 15px;
+  margin-right: -15px;
+  display: flex;
+  align-items: center
 }
 
 #navbar-style {
 	height: 6vh; 
 	position: fixed;
 	width: 100%;
-	zIndex: 1000
+	z-index: 1000
 }
 
 #home-icon {
