--- a/dividesmart/main/static/style/user_tab.less
+++ b/dividesmart/main/static/style/user_tab.less
@@ -7,3 +7,12 @@
 .text-margin {
 	margin-left: 12px;
 }
+
+.no-pending-request {
+  padding-top: 18px;
+  padding-bottom: 12px;
+}
+
+.no-pending-request .am-result-pic {
+  height: 48px;
+}
