--- a/dividesmart/main/static/style/index.less
+++ b/dividesmart/main/static/style/index.less
@@ -2,6 +2,12 @@
 @other-owe-color: #18969c;
 @payment-color: #0984e3;
 
+@fontface {
+  font-family: 'Open Sans', sans-serif;
+  src: url('https://fonts.googleapis.com/css?family=Open+Sans')
+}
+
+
 .topbar-btn {
   color: @brand-primary
 }
