--- a/dividesmart/main/templates/main/index.html
+++ b/dividesmart/main/templates/main/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="An awesome bill splitting Webapp"/>
   <link rel="manifest" href="/static/manifest.json">
   <meta name="theme-color" content="#0060c0">
+  <link rel="icon" href="/static/img/logo.png">
 
   {% include "main/tools_import_subpage.html" %}
   <title>WeShare</title>
