--- a/dividesmart/main/templates/main/login.html
+++ b/dividesmart/main/templates/main/login.html
@@ -7,6 +7,8 @@
     <meta name="description" content="An awesome bill splitting Webapp"/>
     <meta name="theme-color" content="#0060c0">
     <script src="https://apis.google.com/js/api:client.js"></script>
+    <link rel="icon" href="/static/img/logo.png">
+    
     {% include "main/tools_import_subpage.html" %}
     <title>Log In</title>
 </head>
