--- a/dividesmart/main/static/style/login.less
+++ b/dividesmart/main/static/style/login.less
@@ -1,16 +1,17 @@
 #logo-div {
-  height: 138px;
+  height: 160px;
   text-align: center;
 }
 
 #logo {
-  margin-top: 28px;
+  margin-top: 38px;
   height: 80px;
 }
 
 #login-card {
 	margin-left: 8vw;
 	margin-right: 8vw;
+  margin-top: 12vh;
 	padding-bottom: 8vh;
 }
 
