--- a/dividesmart/main/static/style/topbar.less
+++ b/dividesmart/main/static/style/topbar.less
@@ -17,7 +17,7 @@
 }
 
 #navbar-style {
-	height: 6vh; 
+	height: 6vh;
 	position: fixed;
 	width: 100%;
 	z-index: 1000
@@ -27,4 +27,9 @@
 	width: 28px; 
 	height: 28px;
   color: white;
+}
+
+.topbar-btn .am-icon-md {
+  width: 28px;
+  height: 28px;
 }
