--- a/dividesmart/main/static/style/tabs.less
+++ b/dividesmart/main/static/style/tabs.less
@@ -1,13 +1,13 @@
 .icon {
-	margin-bottom: 3;
-	margin-top: 3;
+	margin-bottom: 3px;
+	margin-top: 3px;
 	width: 24px !important; 
 	height: 24px
 }
 
 #tab-bar {
 	position: fixed;
-	height: 94%;
+	height: 92%;
 	width: 100vw; 
-	top: 6% 
+	top: 8%
 }
