update service worker logic

--- a/dividesmart/main/templates/main/index.html
+++ b/dividesmart/main/templates/main/index.html
@@ -19,12 +19,17 @@
 
 <script>
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/sw', { scope: '/' }).then(function(registration) {
-    console.log('Service Worker Registered');
-  });
-  navigator.serviceWorker.ready.then(function(registration) {
-    console.log('Service Worker Ready');
-  });
+  console.log('Service Worker Supported');
+
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/sw', { scope: '/' }).then(function(registration) {
+      // console.log('Service Worker Registered');
+    });
+
+    navigator.serviceWorker.ready.then(function(registration) {
+      // console.log('Service Worker Ready');
+    });
+  })
 }
 </script>
 </html>
