--- a/dividesmart/main/templates/main/register.html
+++ b/dividesmart/main/templates/main/register.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="An awesome bill splitting Webapp"/>
+    <meta name="theme-color" content="#0060c0">
+    <script src="https://apis.google.com/js/api:client.js"></script>
+    <link rel="icon" href="/static/img/logo.png">
+    
+    {% include "main/tools_import_subpage.html" %}
     <title>Register</title>
-</head>
 <body>
-  <h1>Register</h1>
-  <form method="POST" action="/register/">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-  </form>
+    <div id="main"></div>
 </body>
+
+<script src="/static/bundle/main/register.js"></script>
 </html>
+
