--- a/dividesmart/main/static/style/create_form.less
+++ b/dividesmart/main/static/style/create_form.less
@@ -1,11 +1,11 @@
 .avatar {
 	color: #888;
-	fill: #1F90E6
+	fill: #1F90E6;
 }
 
 #avatar-size {
-	height: 28;
-    width: 28
+	height: 28px;
+  width: 28px;
 }
 
 #span-margin {
@@ -14,7 +14,7 @@
 }
 
 .m-list-item {
-	margin-bottom: 8
+	margin-bottom: 8px;
 }
 
 .list-item-text {
@@ -23,12 +23,12 @@
 
 .remove-circle-outline {
 	color: #d35400; 
-	width: 18; 
-	height: 18
+	width: 18px;
+	height: 18px;
 }
 
 #splitter-amount {
 	width: 16vw; 
 	margin-right: 6vw; 
-	bottom: 3px
+	bottom: 3px;
 }
