--- a/dividesmart/main/static/style/create_form.less
+++ b/dividesmart/main/static/style/create_form.less
@@ -5,7 +5,7 @@
 
 #avatar-size {
 	height: 28px;
-  width: 28px;
+	width: 28px;
 }
 
 #span-margin {
@@ -14,7 +14,7 @@
 }
 
 .m-list-item {
-	margin-bottom: 8px;
+	margin-bottom: 8px !important;
 }
 
 .list-item-text {
@@ -23,8 +23,8 @@
 
 .remove-circle-outline {
 	color: #d35400; 
-	width: 18px;
-	height: 18px;
+	width: 18px !important;
+	height: 18px !important;
 }
 
 #splitter-amount {
